# wind_sensor

./: README.md
pico/: CMakeLists.txt  Makefile
pico/src/: main.c  wifi_cred.h
wind_server/: .gitignore  Cargo.toml  template.html
wind_server/src/: main.rs
